replace --enable-native with --with-arch=native

--- a/configure.ac
+++ b/configure.ac
@@ -73,18 +73,24 @@ AX_ARG_ENABLE(debug,
     [nv_strict=0
 	CFLAGS="$CFLAGS -DNDEBUG -O3 -funroll-loops -ffast-math -g0 "])
 
-nv_native=0
-AX_ARG_ENABLE(native,
-        AS_HELP_STRING([--disable-native],[disable -march=native]), [yes],
-        [nv_native=1
-	CFLAGS=" $CFLAGS -march=native "],
-        [])
-	
-nv_sse2=0	
-AX_ARG_ENABLE(sse2,
-        AS_HELP_STRING([--disable-sse2],[disable -msse2]), [yes],
-        [nv_sse2=1],
-        [])
+nv_arch=native
+AC_ARG_WITH(arch,
+	AS_HELP_STRING([--with-arch],
+	[processor architecture. native/generic. (default is native)]),
+	[nv_arch=${withval}],
+	[])
+case $nv_arch in
+  yes|"")
+    nv_arch=native
+    ;;
+  no)
+    nv_arch=generic
+    ;;
+esac
+if test "$nv_arch" != "generic"; then
+   CFLAGS=" $CFLAGS -march=$nv_arch "
+   AC_MSG_NOTICE(adding -march=$nv_arch)
+fi
 
 AX_ARG_ENABLE(ml-test,
         AS_HELP_STRING([--disable-ml-test],[disable machine learning tests]), [yes],
@@ -198,21 +204,9 @@ case $host in
   *)
     ;;
 esac
-case $host in
-  i?86-*)
-    if test $nv_sse2 = 1 -a $nv_native != 1; then
-      echo "Note: set -msse2 flag. (--enable-sse2)"
-      CFLAGS=" $CFLAGS -msse -msse2 "
-    fi
-    ;;
-  *)
-    ;;
-esac
-
 CXXFLAGS=$CFLAGS
 
-AC_SUBST(nv_native)
-AC_SUBST(nv_sse2)
+AC_SUBST(nv_arch)
 AC_SUBST(nv_strict)
 AC_SUBST(nv_glibc_backtrace)
 AC_SUBST(nv_openssl)
@@ -238,7 +232,7 @@ Makefile
 
 AC_OUTPUT
 echo "libnv $NV_MAJOR.$NV_MINOR.$NV_REVISION:"
-echo "   Compiling with Native Instruction . : $nv_native"
+echo "   Processor Architecture ............ : $nv_arch"
 echo "   Compiling with OpenMP ............. : $nv_openmp"
 echo "   Compiling with Debug .............. : $nv_strict"
 echo "   Building with OpenCV support....... : $nv_opencv"
