--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -29,6 +29,7 @@ nv_num_cov.c \
 nv_num_vector.c \
 nv_num_munkres.c \
 nv_num_matrix.c \
+nv_num_standardize.c \
 nv_num_distance.c \
 nv_num_eigen.c \
 nv_num_prime_static.c \
@@ -101,6 +102,7 @@ nv_num_cov.h \
 nv_num_vector.h \
 nv_num_munkres.h \
 nv_num_matrix.h \
+nv_num_standardize.h \
 nv_num_prime.h \
 nv_num.h \
 nv_num_distance.h \
