--- a/vcproj/nv.vcxproj
+++ b/vcproj/nv.vcxproj
@@ -112,7 +112,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>$(ProjectDir)..\src\;$(ProjectDir)..\src\3rd_party\sha1;$(ProjectDir)..\src\3rd_party\mt;$(ProjectDir)..\src\3rd_party;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)..\src\;$(ProjectDir)..\src\3rd_party\sha1;$(ProjectDir)..\src\3rd_party\tinymt;$(ProjectDir)..\src\3rd_party;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>NV_INTERNAL;_CRT_SECURE_NO_WARNINGS;__STDC_FORMAT_MACROS;__STDC_LIMIT_MACROS;__SSE__;__SSE2__;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <MinimalRebuild>true</MinimalRebuild>
       <ExceptionHandling>Sync</ExceptionHandling>
@@ -143,7 +143,7 @@
       <OmitFramePointers>false</OmitFramePointers>
       <EnableFiberSafeOptimizations>false</EnableFiberSafeOptimizations>
       <WholeProgramOptimization>true</WholeProgramOptimization>
-      <AdditionalIncludeDirectories>$(ProjectDir)..\src;$(ProjectDir)..\src\3rd_party\sha1;$(ProjectDir)..\src\3rd_party\mt;$(ProjectDir)..\src\3rd_party;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)..\src;$(ProjectDir)..\src\3rd_party\sha1;$(ProjectDir)..\src\3rd_party\tinymt;$(ProjectDir)..\src\3rd_party;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>NV_INTERNAL;NV_DLL;_CRT_SECURE_NO_WARNINGS;NDEBUG;__STDC_FORMAT_MACROS;__STDC_LIMIT_MACROS;__SSE__;__SSE2__;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ExceptionHandling>Sync</ExceptionHandling>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
@@ -175,7 +175,7 @@
     </Midl>
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>$(ProjectDir)..\src;$(ProjectDir)..\src\3rd_party\msinttypes%3b$(ProjectDir)..\src\3rd_party\sha1%3b$(ProjectDir)..\src\3rd_party\mt;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)..\src;$(ProjectDir)..\src\3rd_party\msinttypes%3b$(ProjectDir)..\src\3rd_party\sha1%3b$(ProjectDir)..\src\3rd_party\tinymt;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>NV_INTERNAL;_CRT_SECURE_NO_WARNINGS;__SSE__;__SSE2__;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <MinimalRebuild>true</MinimalRebuild>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
@@ -205,7 +205,7 @@
       <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
       <OmitFramePointers>false</OmitFramePointers>
       <EnableFiberSafeOptimizations>false</EnableFiberSafeOptimizations>
-      <AdditionalIncludeDirectories>$(ProjectDir)..\src;$(ProjectDir)..\src\3rd_party\msinttypes;$(ProjectDir)..\src\3rd_party\sha1;$(ProjectDir)..\src\3rd_party\mt;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)..\src;$(ProjectDir)..\src\3rd_party\msinttypes;$(ProjectDir)..\src\3rd_party\sha1;$(ProjectDir)..\src\3rd_party\tinymt;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>NV_INTERNAL;_CRT_SECURE_NO_WARNINGS;NDEBUG;__SSE__;__SSE2__;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ExceptionHandling>Sync</ExceptionHandling>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
@@ -238,7 +238,7 @@
       <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
       <OmitFramePointers>false</OmitFramePointers>
       <EnableFiberSafeOptimizations>false</EnableFiberSafeOptimizations>
-      <AdditionalIncludeDirectories>$(ProjectDir)..\src;$(ProjectDir)..\src\3rd_party\msinttypes;$(ProjectDir)..\src\3rd_party\sha1;$(ProjectDir)..\src\3rd_party\mt;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)..\src;$(ProjectDir)..\src\3rd_party\msinttypes;$(ProjectDir)..\src\3rd_party\sha1;$(ProjectDir)..\src\3rd_party\tinymt;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>NV_INTERNAL;_CRT_SECURE_NO_WARNINGS;NDEBUG;__SSE__;__SSE2__;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ExceptionHandling>Sync</ExceptionHandling>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
@@ -323,7 +323,7 @@
     <ClCompile Include="..\src\nv_util_map.cpp" />
     <ClCompile Include="..\src\nv_util_sha1.c" />
     <ClCompile Include="..\src\3rd_party\sha1\sha1.c" />
-    <ClCompile Include="..\src\3rd_party\mt\mt19937-64.c" />
+    <ClCompile Include="..\src\3rd_party\tinymt\tinymt32.c" />
     <ClCompile Include="..\src\3rd_party\getopt\getopt.c" />
   </ItemGroup>
   <ItemGroup>
@@ -399,7 +399,7 @@
     <ClInclude Include="..\src\nv_util_map.h" />
     <ClInclude Include="..\src\nv_util_sha1.h" />
     <ClInclude Include="..\src\3rd_party\sha1\sha.h" />
-    <ClInclude Include="..\src\3rd_party\mt\mt64.h" />
+    <ClInclude Include="..\src\3rd_party\tinymt\tinymt32.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\src\libnv-2.def" />
